# HW1

./: CMakeLists.txt
include/: prime.hpp
src/: main.cpp  prime.cpp
tests/: test.cpp
